# matteros

./: LICENSE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-01-gitlaw-connector.md  2026-04-01-web-auth-permissions.md  2026-04-05-automation-engine.md  2026-04-05-in-house-legal-ops-foundation.md  2026-04-05-in-house-legal-ops-web-ui.md
docs/superpowers/specs/: 2026-04-01-gitlaw-connector-design.md  2026-04-01-web-auth-permissions-design.md  2026-04-05-automation-engine-design.md  2026-04-05-in-house-legal-ops-design.md
matteros/: cli.py
matteros/automation/: deadlines.py  engine.py  intake.py  notify.py  stale.py  state.py
matteros/connectors/: __init__.py  base.py  gitlaw.py
matteros/core/: audit.py  config.py
matteros/core/migrations/: v004_sessions.py  v005_matters.py  v006_automation_state.py
matteros/drafts/: manager.py
matteros/matters/: auth.py  store.py
matteros/team/: users.py
matteros/web/: app.py  auth.py
matteros/web/templates/: all_matters.html  base.html  deadlines.html  login.html  (+3 more)
tests/: test_audit_redaction.py  test_automation_deadlines.py  test_automation_engine.py  test_automation_intake.py  test_automation_notify.py  test_automation_stale.py  test_automation_state.py  test_gitlaw_connector.py  test_matter_auth.py  test_matter_integration.py  test_matter_roles.py  test_matter_store.py  test_migration_v005.py  test_migrations.py  test_recurring_deadlines.py  test_team.py  test_web_auth.py  test_web_auth_sessions.py  test_web_matters.py  test_web_run_sse.py  test_web_run_trigger.py  test_web_sse_new_events.py
(+7 files in other folders)
