[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "matteros"
version = "0.1.0"
description = "CLI-first legal ops orchestration with safe, auditable agent workflows"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
  { name = "MatterOS Contributors" }
]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8.2",
  "PyYAML>=6.0.2",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
tui = ["textual>=0.85.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "jinja2>=3.1.0", "python-multipart>=0.0.9"]
team = ["matteros[web]", "bcrypt>=4.0.0", "python-jose>=3.3.0"]
daemon = ["watchdog>=4.0.0"]
all = ["matteros[tui]", "matteros[web]", "matteros[team]", "matteros[daemon]"]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "vcrpy>=6.0.2",
  "textual-dev>=1.0.0",
  "httpx[cli]>=0.27.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9"
]

[project.scripts]
matteros = "matteros.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "external: external API contract tests (opt-in)"
]

[tool.hatch.build.targets.wheel]
packages = ["matteros"]
